#505 GitHub base url configurable

--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -110,7 +110,7 @@
     <div class="marketing" >
       <h2 class="casual">Be smart and automate</h2>
       <p>VersionEye can monitor your project on GitHub and notify you about out-dated dependencies.</p>
-      <a href='https://github.com/login/oauth/authorize?client_id=50fb47103b8a3f03b2cd' onclick="page_view('ga_lp_file_upload_login_with_github')" >
+      <a href='<%= Settings.instance.github_base_url %>/login/oauth/authorize?client_id=50fb47103b8a3f03b2cd' onclick="page_view('ga_lp_file_upload_login_with_github')" >
         <span class="btn btn-large btn-primary">Login with GitHub</span>
       </a>
     </div>
