--- a/app/views/shared/_login_with_github.html.erb
+++ b/app/views/shared/_login_with_github.html.erb
@@ -1,1 +1,1 @@
-<button onclick="page_view('ga_login_with_github'); document.location.href='https://github.com/login/oauth/authorize?client_id=<%=Settings.instance.github_client_id%>';" class="btn btn-github btn-large btn-signin"><i class = "icon-github"></i> | Login with GitHub</button>
+<button onclick="page_view('ga_login_with_github'); document.location.href='<%= Settings.instance.github_base_url %>/login/oauth/authorize?client_id=<%=Settings.instance.github_client_id%>';" class="btn btn-github btn-large btn-signin"><i class = "icon-github"></i> | Login with GitHub</button>
