--- a/app/views/user/github_repos/init.html.erb
+++ b/app/views/user/github_repos/init.html.erb
@@ -27,7 +27,7 @@
       <div class="content flash warning" >
         With the current scope VersionEye can only fetch your public repositories.
         If you want us to monitor your private repositories, you need to grant VersionEye access:
-        <a href='https://github.com/login/oauth/authorize?client_id=50fb47103b8a3f03b2cd&amp;scope=repo' style="margin-right: 5px;" >
+        <a href='<%= Settings.instance.github_base_url %>/login/oauth/authorize?client_id=50fb47103b8a3f03b2cd&amp;scope=repo' style="margin-right: 5px;" >
           Grant access to private repositories.
         </a><br/><br/>
         Unfortunately, GitHub doesn't have a read-only scope for private repositories currently.
