Update link to blog.

--- a/app/views/shared/_user_created.html.erb
+++ b/app/views/shared/_user_created.html.erb
@@ -8,7 +8,7 @@
 <br/>
 <p>
 	We've always got more updates and new features coming, so keep
-	your eye on the VersionEye Blog: <a href="http://versioneye.wordpress.com">http://versioneye.wordpress.com</a>
+	your eye on the VersionEye Blog: <a href="http://blog.versioneye.com/">http://blog.versioneye.com/</a>
 	or follow <a href="https://twitter.com/VersionEye">@VersionEye</a> on Twitter for the latest.<br/>
 	<br/>
 	<span>
