--- a/app/views/products/_product_show_comment.html.erb
+++ b/app/views/products/_product_show_comment.html.erb
@@ -30,7 +30,7 @@
 <% elsif %>
 	<div class="well well-small">
 		<div class = "span3" style="font-size: 14px;">
-			<%= link_to "Sign In", signin_path %> to leave a comment.
+			<%= link_to "Sign in", signin_path %> to leave a comment.
 		</div>
 		<div class = "span4 pull-right">
 			<%= render 'shared/login_options_vertical' %>
