--- a/app/views/shared/_social_buttons.html.erb
+++ b/app/views/shared/_social_buttons.html.erb
@@ -1,4 +1,4 @@
-<% if !yield(:title).eql?('Sign Up') && !yield(:title).eql?('Sign In') %>
+<% if !yield(:title).eql?('Sign Up') && !yield(:title).eql?('Sign in') %>
 <div class="socialbuttons visible-desktop">
   <div>
     <a href="http://versioneye.wordpress.com" target="new_tab_for_blog" title="Blog" >
