--- a/app/views/auth/github/new.html.erb
+++ b/app/views/auth/github/new.html.erb
@@ -2,7 +2,7 @@
 
 <div class="span10 col2-left" >
 
-  <%= form_tag('/auth/github/create', :method => 'post', :class => 'form-horizontal') do  %>
+  <%= form_tag('/auth/github/create', :method => 'post', :class => 'form-horizontal', :id => "new_github_user_form") do  %>
 
     <div class="control-group">
       <div class="controls">
@@ -13,7 +13,8 @@
     <div class="control-group">
       <%= label_tag(:email, "E-Mail", :class => "control-label", :for => "email") %>
       <div class="controls">
-        <%= text_field_tag :email, @email, :class => "round", :id => "email"  %> mandatory
+        <%= text_field_tag :email, @email, :class => "round", :id => "email"  %>
+        <%= render :partial => 'shared/input_error', :locals => {:model => @user, :key => :email} %>
       </div>
     </div>
 
@@ -55,4 +56,3 @@
   <% end %>
 
 </div>
-
