--- a/app/views/shared/_social_media_login.html.erb
+++ b/app/views/shared/_social_media_login.html.erb
@@ -2,7 +2,7 @@
     <div class = "sml_header">
       <span class  = "icon_profile48 rounded"></span>
     </div>
-    <h2> Or sign up with one of your social media accounts </h2>
+    <h2> Or sign in with one of your social media accounts </h2>
     <div >
       <ul class="sml_list" >
         <li class="sml_list_item"><%= render 'shared/login_with_github'   , :btn => 'login' %></li>
