--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
 
   <%= render 'shared/messages' %>
 
-  <% if !signed_in?  %>
+  <% if !signed_in? && (@product || @products)  %>
     <%= render 'shared/dialog_follow' %>
     <%= render 'shared/dialog_login_feature' %>
   <% end %>
