--- a/app/views/user/github_repos/init.html.erb
+++ b/app/views/user/github_repos/init.html.erb
@@ -23,7 +23,7 @@
       <div id = "github-menu" ></div>
       <div id = "github-loader-notification" class = "notification">&nbsp;</div>
     </div>
-    <% if !current_user.github_token.nil? && !current_user.github_scope.eql?("repo") %>
+    <% if !current_user.github_token.to_s.split(", ").include?("repo") %>
       <div class="content flash warning" >
         With the current scope VersionEye can only fetch your public repositories.
         If you want us to monitor your private repositories, you need to grant VersionEye access:
