--- a/app/views/shared/_dialog_login_feature.html.erb
+++ b/app/views/shared/_dialog_login_feature.html.erb
@@ -13,6 +13,7 @@
 
     <div style="padding: 20px 0;">
       <%= render 'shared/login_with_github' %>
+      <%= render 'shared/login_with_bitbucket' %>
     </div>
 
     <div>
