--- a/app/views/settings/_navi.html.erb
+++ b/app/views/settings/_navi.html.erb
@@ -14,8 +14,12 @@
     <li><%= link_to 'Profile'            , settings_profile_path %></li>
     <li><%= link_to 'Links'              , settings_links_path %></li>
     <li><%= link_to 'E-Mails'            , settings_emails_path %></li>
-    <li><%= link_to 'Plans & Pricing'    , settings_plans_path %></li>
-    <li><%= link_to 'Payments'           , settings_payments_path %></li>
+
+    <% if !Rails.env.enterprise? %>
+      <li><%= link_to 'Plans & Pricing'    , settings_plans_path %></li>
+      <li><%= link_to 'Payments'           , settings_payments_path %></li>
+    <% end %>
+
     <li><%= link_to 'Connect'            , settings_connect_path %></li>
     <li><%= link_to 'Password'           , settings_password_path %></li>
     <li><%= link_to 'Notification Center', settings_notifications_path %></li>
