--- a/app/views/user/projects/_collaborator.html.erb
+++ b/app/views/user/projects/_collaborator.html.erb
@@ -16,7 +16,7 @@
         </p>
       <% else %>
         <p>
-          User with email(<small> <%= collaborator[:invitation_email] %> </small>) dont exist. Please invite him/her!
+          User with email(<small> <%= collaborator[:invitation_email] %> </small>) doesn't exist. Please invite him/her!
         <p>
       <% end %>
     </div>
@@ -30,4 +30,3 @@
     </div>
   </div>
 </div>
-
