--- a/app/views/settings/_navi.html.erb
+++ b/app/views/settings/_navi.html.erb
@@ -6,7 +6,8 @@
     <li><%= link_to 'Profile'            , settings_profile_path %></li>
     <li><%= link_to 'E-Mail Settings'    , settings_emailsettings_path %></li>
     <li><%= link_to 'Global Settings'    , settings_globalsettings_path %></li>
-    <li><%= link_to 'GitHub Settings', settings_githubsettings_path %></li>
+    <li><%= link_to 'GitHub Settings'    , settings_githubsettings_path %></li>
+    <li><%= link_to 'CocoaPods Specs'    , settings_cocoapods_path %></li>
     <li><%= link_to 'Sonatype Nexus'     , settings_nexussettings_path %></li>
     <li><%= link_to 'E-Mails'            , settings_emails_path %></li>
     <li><%= link_to 'Password'           , settings_password_path %></li>
