#511 Dependency Wheel for GitHub Projects.

--- a/app/views/products/_product_show_dependencies.html.erb
+++ b/app/views/products/_product_show_dependencies.html.erb
@@ -17,11 +17,8 @@
 
   <%= partial ? render(partial) : "" %>
 
-
   <% dependencies = @product.dependencies %>
-  <% if ( @product.language.eql?(Product::A_LANGUAGE_NODEJS) ||
-          @product.language.eql?(Product::A_LANGUAGE_JAVA) ) &&
-          !dependencies.empty? && dependencies.count > 2 %>
+  <% if Product::A_LANGS_DEP_GRAPH.include?( @product.language ) && !dependencies.empty? && dependencies.count > 2 %>
     <a href="/<%= @product.language_esc%>/<%= @product.to_param%>/<%= @product.version_to_url_param %>/visual_dependencies">
       See visual page
     </a>
