--- a/app/views/products/show_visual.html.erb
+++ b/app/views/products/show_visual.html.erb
@@ -51,7 +51,7 @@
       <%= image_tag "loadingbar.gif" %>
     </div>
     <div>
-      <h4 style="text-align: center; display: none; width: 100%" id="infoBox" >
+      <h4 style="text-align: center; width: 100%; display: none;" id="infoBox" >
         <span >
           <a id="pinit" style="display: none;" href="" class="pin-it-button" ><img alt="pint_it_on_pinterest" src="//assets.pinterest.com/images/PinExt.png" title="Pin It" /></a>
         </span><br/>
@@ -60,7 +60,7 @@
       </h4>
     </div>
     <div style="text-align: center;">
-      <a href="/<%=@product.language_esc%>/<%=@product.to_param%>/<%=@version.to_param%>">See more details</a>
+      <a href="/<%=@product.language_esc%>/<%=@product.to_param%>/<%=@version.to_param%>">Back to detail page</a>
     </div>
     <br/>
     <br/>
