Change B. Address on receipt.

--- a/app/views/settings/payments/receipt.html.erb
+++ b/app/views/settings/payments/receipt.html.erb
@@ -92,8 +92,8 @@ table.list .center {
         </td>
         <td class="right">
           VersionEye GmbH<br />
-          Invalidenstraße 50/51<br />
-          10557 Berlin<br />
+          Rudolf-Breitscheid-Straße 187<br />
+          14482 Potsdam<br />
           Germany<br />
         </td>
       </tr>
