Change png badge through svg badge

--- a/app/views/shared/_dependency_badge.html.erb
+++ b/app/views/shared/_dependency_badge.html.erb
@@ -6,6 +6,6 @@
   </a>
   <script type="text/javascript">
     element = document.getElementById("dependency_badge");
-    element.src = document.URL.split("?")[0] + "/badge.png"
+    element.src = document.URL.split("?")[0] + "/badge.svg"
   </script>
 <% end %>
