--- a/app/views/user/bitbucket_repos/init.html.erb
+++ b/app/views/user/bitbucket_repos/init.html.erb
@@ -36,4 +36,4 @@
 <% end %>
 
 <!-- templates for frontend app -->
-<%= render "shared/scm_app_templates" %>
+<%= render :partial => "shared/scm_app_templates", :locals => { :scm_base_url => 'https://bitbucket.org' } %>
