--- a/app/views/services/pricing.html.erb
+++ b/app/views/services/pricing.html.erb
@@ -199,7 +199,7 @@
         <% else %>
           <form action="/settings/update_plan" method="POST" >
             <input type="hidden" name="plan" value="02_business_normal" />
-            <button id="business_normal_button" type="submit" class="btn2 btn2-big pull-right" >Book It</button>
+            <button id="business_normal_big" type="submit" class="btn2 btn2-big pull-right" >Book It</button>
           </form>
         <% end %>
       <% else %>
@@ -225,7 +225,7 @@
         <% else %>
           <form action="/settings/update_plan" method="POST" >
             <input type="hidden" name="plan" value="02_business_normal" />
-            <button id="business_normal_button" type="submit" class="btn2 btn2-big pull-right" >Book It</button>
+            <button id="business_normal_large" type="submit" class="btn2 btn2-big pull-right" >Book It</button>
           </form>
         <% end %>
       <% else %>
